Hide compiled files in vscode 🙅🏼‍♀️

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script>
     window.process = { env: { NODE_ENV: 'development' } }
   </script>
-  <script src="/moduleserve/load.js" data-module="/src/Index.bs.js"></script>
+  <script src="/moduleserve/load.js" data-module="/src/Index.js"></script>
   <script src="/watcher.js"></script>
 </body>
 
